fixed quote and bio layout on small portrait

--- a/style.css
+++ b/style.css
@@ -771,10 +771,11 @@ header {
 
   .bio {
     grid-column: 1 / 12;
+    width: 80vw;
   }
 
   .quote {
-    grid-column: 2 / span 12;
+    grid-column: 1 / span 12;
   }
 
 }
